--- a/0rison.csproj
+++ b/0rison.csproj
@@ -77,83 +77,39 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Colliders\PolygonCollider.cs" />
+    <Compile Include="AssemblyInfo.cs" />
+    <Compile Include="Colliders\BoxCollider.cs" />
+    <Compile Include="Colliders\Collider.cs" />
     <Compile Include="Components\Alarm.cs" />
     <Compile Include="Components\AutoTimer.cs" />
-    <Compile Include="Components\Axis.cs" />
-    <Compile Include="Components\Bone.cs" />
     <Compile Include="Components\Button.cs" />
     <Compile Include="Components\Component.cs" />
-    <Compile Include="Components\Controllers\Controller.cs" />
-    <Compile Include="Components\Controllers\ControllerPS3.cs" />
-    <Compile Include="Components\Controllers\ControllerXbox360.cs" />
-    <Compile Include="Components\Countdown.cs" />
-    <Compile Include="Components\Events\EventProcessorEvent.cs" />
-    <Compile Include="Components\Events\EventQueue.cs" />
-    <Compile Include="Components\Events\EventStack.cs" />
-    <Compile Include="Components\Events\EventProcessor.cs" />
-    <Compile Include="Components\GridCounter.cs" />
-    <Compile Include="Components\IRC.cs" />
-    <Compile Include="Components\Lerper.cs" />
-    <Compile Include="Components\Movement\BasicMovement.cs" />
-    <Compile Include="Components\Movement\Movement.cs" />
-    <Compile Include="Components\Movement\PlatformingMovement.cs" />
-    <Compile Include="Components\SineWave.cs" />
-    <Compile Include="Components\Skeleton.cs" />
-    <Compile Include="Components\Snake.cs" />
-    <Compile Include="Components\StateMachine.cs" />
-    <Compile Include="Components\Vertebrae.cs" />
     <Compile Include="Core\Entity.cs" />
     <Compile Include="Core\Game.cs" />
-    <Compile Include="Graphics\Anim.cs" />
-    <Compile Include="Graphics\Atlas.cs" />
-    <Compile Include="Graphics\Drawables\GraphicList.cs" />
-    <Compile Include="Graphics\Text\BitmapFont.cs" />
-    <Compile Include="Graphics\Drawables\Decals.cs" />
-    <Compile Include="Graphics\Text\Font.cs" />
-    <Compile Include="Graphics\Drawables\Gradient.cs" />
-    <Compile Include="Graphics\Drawables\Graphic.cs" />
-    <Compile Include="Graphics\Drawables\Grid.cs" />
-    <Compile Include="Graphics\Drawables\Image.cs" />
-    <Compile Include="Graphics\Drawables\ImageSet.cs" />
-    <Compile Include="Graphics\Drawables\NineSlice.cs" />
-    <Compile Include="Graphics\Transformation.cs" />
-    <Compile Include="Utility\DataSaver.cs" />
-    <Compile Include="Utility\Glide\GlideLerper.cs" />
-    <Compile Include="Utility\Glide\Tween.cs" />
-    <Compile Include="Utility\Glide\Tweener.cs" />
-    <Compile Include="Utility\Polygon.cs" />
-    <Compile Include="Utility\SpriteBatch.cs" />
-    <Compile Include="Graphics\Drawables\SquareClock.cs" />
-    <Compile Include="Graphics\Text\RichText.cs" />
-    <Compile Include="Graphics\Shader.cs" />
-    <Compile Include="Graphics\Drawables\Spritemap.cs" />
-    <Compile Include="Graphics\Drawables\Surface.cs" />
-    <Compile Include="Graphics\Text\Text.cs" />
-    <Compile Include="Graphics\Texture.cs" />
-    <Compile Include="Graphics\Drawables\Tilemap.cs" />
-    <Compile Include="Graphics\Vert.cs" />
     <Compile Include="Core\Input.cs" />
     <Compile Include="Core\Music.cs" />
-    <Compile Include="Graphics\Drawables\Vertices.cs" />
-    <Compile Include="Colliders\BoxCollider.cs" />
-    <Compile Include="Colliders\CircleCollider.cs" />
-    <Compile Include="Colliders\Collider.cs" />
-    <Compile Include="Colliders\GridCollider.cs" />
-    <Compile Include="Colliders\LineCollider.cs" />
-    <Compile Include="Colliders\PixelCollider.cs" />
-    <Compile Include="Colliders\PointCollider.cs" />
-    <Compile Include="Utility\Speed.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Core\Scene.cs" />
     <Compile Include="Core\Session.cs" />
     <Compile Include="Core\Sound.cs" />
-    <Compile Include="Utility\Cache.cs" />
+    <Compile Include="Graphics\Anim.cs" />
+    <Compile Include="Graphics\Atlas.cs" />
     <Compile Include="Graphics\Color.cs" />
-    <Compile Include="Components\Counter.cs" />
+    <Compile Include="Graphics\Shader.cs" />
+    <Compile Include="Graphics\Texture.cs" />
+    <Compile Include="Graphics\Transformation.cs" />
+    <Compile Include="Graphics\Drawables\Decals.cs" />
+    <Compile Include="Graphics\Drawables\Gradient.cs" />
+    <Compile Include="Graphics\Drawables\Graphic.cs" />
+    <Compile Include="Graphics\Drawables\Image.cs" />
+    <Compile Include="Graphics\Drawables\Spritemap.cs" />
+    <Compile Include="Graphics\Drawables\Surface.cs" />
+    <Compile Include="Graphics\Drawables\Text.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utility\Cache.cs" />
     <Compile Include="Utility\Coroutine.cs" />
-    <Compile Include="Utility\Debugger.cs" />
     <Compile Include="Utility\DebugInput.cs" />
+    <Compile Include="Utility\Debugger.cs" />
+    <Compile Include="Utility\DataSaver.cs" />
     <Compile Include="Utility\Draw.cs" />
     <Compile Include="Utility\Entities\Flash.cs" />
     <Compile Include="Utility\Entities\Particle.cs" />
@@ -162,16 +118,22 @@
     <Compile Include="Utility\Glide\Ease.cs" />
     <Compile Include="Utility\Glide\GlideInfo.cs" />
     <Compile Include="Utility\GoodStuff\NaturalLanguage.cs" />
+    <Compile Include="Utility\Glide\GlideLerper.cs" />
+    <Compile Include="Utility\Glide\Tween.cs" />
+    <Compile Include="Utility\Glide\Tweener.cs" />
     <Compile Include="Utility\Line2.cs" />
     <Compile Include="Utility\MonoGame\MathHelper.cs" />
     <Compile Include="Utility\MonoGame\Matrix.cs" />
-    <Compile Include="Utility\MonoGame\Quaternion.cs" />
-    <Compile Include="Utility\OgmoProject.cs" />
     <Compile Include="Utility\MonoGame\Point.cs" />
+    <Compile Include="Utility\MonoGame\Quaternion.cs" />
+    <Compile Include="Utility\MonoGame\Rectangle.cs" />
     <Compile Include="Utility\Rand.cs" />
     <Compile Include="Utility\Range.cs" />
-    <Compile Include="Utility\MonoGame\Rectangle.cs" />
+    <Compile Include="Utility\OgmoProject.cs" />
+    <Compile Include="Utility\Polygon.cs" />
     <Compile Include="Utility\Ref.cs" />
+    <Compile Include="Utility\Speed.cs" />
+    <Compile Include="Utility\SpriteBatch.cs" />
     <Compile Include="Utility\Util.cs" />
     <Compile Include="Utility\MonoGame\Vector2.cs" />
     <Compile Include="Utility\MonoGame\Vector3.cs" />
